# SIH_2025_PS25037_Topcoders_NSUT

./: Copy of drone.glb  README.md
codes/: README.md
codes/ml_mode_1/: .replit  COMMIT_EDITMSG  app.py  data_generator.py  index  label_encoders.pkl  ml_model.py  pyproject.toml  scaler.pkl  sediment_model.pkl  supabase_client.py  synthetic_dataset.csv  utils.py
codes/ml_mode_1/attached_assets/: Pasted-Backend-Python-FastAPI-Flask-Generate-a-synthetic-dataset-of-2000-samples-with-Grain-size--1759196987810_1759196987824.txt
codes/ml_mode_1/components/: analytics.py  map_component.py  upload_interface.py
codes/ml_mode_1/logs/refs/heads/: main  replit-agent
codes/ml_mode_1/refs/heads/: main  replit-agent
codes/website/: README.md
files/: Internal_VIDEO_LINK_Topcoders.txt
files/cad models/: DroneModule.stl  HandHeldModule.stl
