[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "streamlit-folium>=0.25.2",
    "streamlit>=1.50.0",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "folium>=0.20.0",
    "pandas>=2.3.3",
    "numpy>=2.3.3",
    "faker>=37.8.0",
    "joblib>=1.5.2",
    "sqlalchemy>=2.0.43",
]
